<resources>
    <string name="app_name">InClass06</string>
    <string name="most_popular">Most Popular</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="opinion">Opinion</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="tech">Tech</string>
    <string name="travel">Travel</string>
    <string name="us">U.S.</string>
    <string name="title_activity_news_web_view">NewsWebViewActivity</string>
</resources>
