<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hw.praveen.inclass06.MainActivity"
    android:background="#fe4800">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/most_popular"
                android:id="@+id/most_popular"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/entertainment"
                android:id="@+id/entertainment"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/health"
                android:id="@+id/health"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lifestyle"
                android:id="@+id/lifestyle"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/opinion"
                android:id="@+id/opinion"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/politics"
                android:id="@+id/politics"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/science"
                android:id="@+id/science"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sports"
                android:id="@+id/sports"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tech"
                android:id="@+id/tech"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/travel"
                android:id="@+id/travel"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/us"
                android:id="@+id/us"
                android:textAlignment="center"
                android:layout_marginBottom="30dp"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:onClick="onClickView" />
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
